🐛 fix style.css: Adjust left/right padding for .menuList .list-cell to prevent unwanted horizontal scrollbar on small screens

--- a/src/main/resources/fr/softsf/sudokufx/style/style.css
+++ b/src/main/resources/fr/softsf/sudokufx/style/style.css
@@ -248,7 +248,7 @@
     -fx-background-color: transparent;
     -fx-border-width: .2em;
     -fx-border-color: transparent;
-    -fx-padding: 0.07em 0.5em 0.07em 0.5em;
+    -fx-padding: 0.07em 0.3em 0.07em 0.3em;
 }
 
 .menuList .list-cell:focused {
